Added region_cut_snaphu parameter to intf_tops.csh and batch_tops.config

--- a/gmtsar/csh/batch_tops.config
+++ b/gmtsar/csh/batch_tops.config
@@ -87,6 +87,11 @@ near_interp = 1
 # use landmask (1 -- yes; else -- no)
 switch_land = 0
 
+# region to unwrap in radar coordinates of the resulting unwrapped phase grid
+# (leave it blank if to process the whole unwrapped phase grid)
+# example format 500/800/200/400  - OPTIONAL
+region_cut_snaphu = 
+
 #
 # Allow phase discontinuity in unrapped phase. This is needed for interferograms having sharp phase jumps.
 # defo_max = 0 - used for smooth unwrapped phase such as interseismic deformation
